--- a/src/applications/features/speech_recognition/utils/config.yaml
+++ b/src/applications/features/speech_recognition/utils/config.yaml
@@ -1,5 +1,7 @@
 model_name: "facebook/wav2vec2-large-960h-lv60-self"
 sampling_rate: 22050 # read cảefully which sampling rate model is  trained with
 device: "cpu"
-data_path: "" # for evaluation
+audio_path: "/mnt/c/Users/ASUS/Documents/Capstone project sp23/audio" # for evaluation
+caption_path: "../../data/captionData.json"
+caption_json: True
 chunk_lenght_s: 10 # in seconds
