*utils.preprocessing, speech_recognize, and ehance_speech: fix dim conflicts

--- a/src/applications/features/speech_recognition/utils/config.yaml
+++ b/src/applications/features/speech_recognition/utils/config.yaml
@@ -1,4 +1,5 @@
-model_name: "facebook/wav2vec2-large-960h"
+en_model_name: "facebook/wav2vec2-large-960h"
+vi_model_name: ""
 sampling_rate: 22050 # read cảefully which sampling rate model is  trained with
 device: "cpu"
 audio_path: "/mnt/c/Users/ASUS/Documents/Capstone project sp23/audio" # for evaluation
