--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-transformers
+transformers==4.27.1
 config-with-yaml
 speechbrain
 torch
-torchaudio== 0.13.1
+torchaudio==0.13.1
 torchtext
 tqdm
 librosa==0.9.2
@@ -11,7 +11,7 @@ evaluate
 jiwer
 bs4
 denoiser
-sklearn
+scikit-learn
 flask
 moviepy
 ffmpeg
